--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1"
+  },
   "devDependencies": {
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.2"
