--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "install-server": "npm install --prefix server",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "install-client": "npm install --prefix client",
     "install-all": "concurrently npm:install-server npm:install-client",
     "start": "node server",
