--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Hack Your Social",
   "main": "server/index.js",
+  "engines": {
+    "node": "v12.10.0"
+  },
   "scripts": {
     "install-server": "npm install --prefix server",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "install-client": "npm install --prefix client",
     "install-all": "concurrently npm:install-server npm:install-client",
-    "start": "node server",
+    "start": "cd server && node index.js",
     "server": "nodemon server",
     "client": "npm run start --prefix client",
     "dev": "concurrently npm:server npm:client"
